--- a/index.html
+++ b/index.html
@@ -4,52 +4,73 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Placa Mãe e Seus Componentes</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 20px;
-        }
-        h1 {
-            color: #333;
-        }
-        h2 {
-            color: #555;
-        }
-        ul {
-            list-style-type: none;
-            padding : 0;
-        }
-        li {
-            background: #fff;
-            margin: 5px 0;
-            padding: 10px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-        }
-    </style>
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
 
-    <h1>Placa Mãe</h1>
-    <p>A placa-mãe é um dos componentes mais importantes de um computador, servindo como a principal placa de circuito que conecta todos os outros componentes. Ela permite a comunicação entre o processador, a memória, os dispositivos de armazenamento e outros periféricos.</p>
+    <header>
+        <h1>Placa Mãe</h1>
+        <p>A placa-mãe é um dos componentes mais importantes de um computador, servindo como a principal placa de circuito que conecta todos os outros componentes.</p>
+    </header>
 
-    <h2>Componentes da Placa Mãe</h2>
-    <ul>
-        <li><strong>Socket do Processador:</strong> Onde o processador é instalado.</li>
-        <li><strong>Slots de Memória RAM:</strong> Conectores para módulos de memória RAM.</li>
-        <li><strong>Chipset:</strong> Controla a comunicação entre o processador e outros componentes.</li>
-        <li><strong>Slots de Expansão:</strong> Para placas adicionais, como placas de vídeo e de som.</li>
-        <li><strong>Conectores SATA:</strong> Para conectar discos rígidos e SSDs.</li>
-        <li><strong>Conectores de Alimentação:</strong> Para fornecer energia à placa-mãe e aos componentes.</li>
-        <li><strong>Portas USB:</strong> Para conectar dispositivos externos.</li>
-        <li><strong>Saídas de Vídeo:</strong> Para conectar monitores (HDMI, DisplayPort, etc.).</li>
-        <li><strong>BIOS/UEFI:</strong> Firmware que inicializa o hardware e gerencia as configurações do sistema.</li>
-    </ul>
+    <section>
+        <h2>Componentes da Placa Mãe</h2>
+        <ul>
+            <li><strong>Socket do Processador:</strong> Onde o processador é instalado.</li>
+            <li><strong>Slots de Memória RAM:</strong> Conectores para módulos de memória RAM.</li>
+            <li><strong>Chipset:</strong> Controla a comunicação entre o processador e outros componentes.</li>
+            <li><strong>Slots de Expansão:</strong> Para placas adicionais, como placas de vídeo e de som.</li>
+            <li><strong>Conectores SATA:</strong> Para conectar discos rígidos e SSDs.</li>
+            <li><strong>Conectores de Alimentação:</strong> Para fornecer energia à placa-mãe e aos componentes.</li>
+            <li><strong>Portas USB:</strong> Para conectar dispositivos externos.</li>
+            <li><strong>Saídas de Vídeo:</strong> Para conectar monitores (HDMI, DisplayPort, etc.).</li>
+            <li><strong>BIOS/UEFI:</strong> Firmware que inicializa o hardware e gerencia as configurações do sistema.</li>
+        </ul>
+    </section>
 
-    <h2>Conclusão</h2>
-    <p>A escolha de uma boa placa-mãe é fundamental para garantir a compatibilidade e o desempenho do seu computador. É importante considerar os componentes que você pretende usar e as funcionalidades que você precisa.</p>
+    <section>
+        <h2>Especificações da Placa Mãe</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Especificação</th>
+                    <th>Detalhes</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Formato</td>
+                    <td>ATX</td>
+                </tr>
+                <tr>
+                    <td>Socket</td>
+                    <td>AM4</td>
+                </tr>
+                <tr>
+                    <td>Slots de RAM</td>
+                    <td>4 x DDR4</td>
+                </tr>
+                <tr>
+                    <td>Conectores SATA</td>
+                    <td>6 x SATA III</td>
+                </tr>
+                <tr>
+                    <td>Portas USB</td>
+                    <td>4 x USB 3.0, 2 x USB 2.0</td>
+                </tr>
+            </tbody>
+        </table>
+    </section>
+
+    <section>
+        <h2>Imagem da Placa Mãe</h2>
+        <img src="placamae.jpg" alt="Imagem de uma Placa Mãe" />
+    </section>
+
+    <footer>
+        <h2>Conclusão</h2>
+        <p>A escolha de uma boa placa-mãe é fundamental para garantir a compatibilidade e o desempenho do seu computador. É importante considerar os componentes que você pretende usar e as funcionalidades que você precisa.</p>
+    </footer>
 
 </body>
 </html>
