adicionando imagens dos equipamentos e mudando o design

--- a/index.html
+++ b/index.html
@@ -16,15 +16,42 @@
     <section>
         <h2>Componentes da Placa Mãe</h2>
         <ul>
-            <li><strong>Socket do Processador:</strong> Onde o processador é instalado.</li>
-            <li><strong>Slots de Memória RAM:</strong> Conectores para módulos de memória RAM.</li>
-            <li><strong>Chipset:</strong> Controla a comunicação entre o processador e outros componentes.</li>
-            <li><strong>Slots de Expansão:</strong> Para placas adicionais, como placas de vídeo e de som.</li>
-            <li><strong>Conectores SATA:</strong> Para conectar discos rígidos e SSDs.</li>
-            <li><strong>Conectores de Alimentação:</strong> Para fornecer energia à placa-mãe e aos componentes.</li>
-            <li><strong>Portas USB:</strong> Para conectar dispositivos externos.</li>
-            <li><strong>Saídas de Vídeo:</strong> Para conectar monitores (HDMI, DisplayPort, etc.).</li>
-            <li><strong>BIOS/UEFI:</strong> Firmware que inicializa o hardware e gerencia as configurações do sistema.</li>
+            <li>
+                <img src="socket.jpg" alt="Socket do Processador" />
+                <strong>Socket do Processador:</strong> Onde o processador é instalado.
+            </li>
+            <li>
+                <img src="slots de memoria ram.jpg" alt="Slots de Memória RAM" />
+                <strong>Slots de Memória RAM:</strong> Conectores para módulos de memória RAM.
+            </li>
+            <li>
+                <img src="chipset.jpg" alt="Chipset" />
+                <strong>Chipset:</strong> Controla a comunicação entre o processador e outros componentes.
+            </li>
+            <li>
+                <img src="slots de expansao.jpg" alt="Slots de Expansão" />
+                <strong>Slots de Expansão:</strong> Para placas adicionais, como placas de vídeo e de som.
+            </li>
+            <li>
+                <img src="conectores sata.webp" alt="Conectores SATA" />
+                <strong>Conectores SATA:</strong> Para conectar discos rígidos e SSDs.
+            </li>
+            <li>
+                <img src="conector de alimentação.jpg" alt="Conectores de Alimentação" />
+                <strong>Conectores de Alimentação:</strong> Para fornecer energia à placa-mãe e aos componentes.
+            </li>
+            <li>
+                <img src="portas usb.jpg" alt="Portas USB" />
+                <strong>Portas USB:</strong> Para conectar dispositivos externos.
+            </li>
+            <li>
+                <img src="saida de videos.jpg" alt="Saídas de Vídeo" />
+                <strong>Saídas de Vídeo:</strong> Para conectar monitores (HDMI, DisplayPort, etc.).
+            </li>
+            <li>
+                <img src="bios uefi.jpg" alt="BIOS/UEFI" />
+                <strong>BIOS/UEFI:</strong> Firmware que inicializa o hardware e gerencia as configurações do sistema.
+            </li>
         </ul>
     </section>
 
@@ -69,7 +96,7 @@
 
     <footer>
         <h2>Conclusão</h2>
-        <p>A escolha de uma boa placa-mãe é fundamental para garantir a compatibilidade e o desempenho do seu computador. É importante considerar os componentes que você pretende usar e as funcionalidades que você precisa.</p>
+        <p>A escolha de uma boa placa-mãe é fundamental para garantir a compatibilidade e o desempenho do seu computador. É importante considerar os componentes que você pretende usar e as funcionalidades que você precisa .</p>
     </footer>
 
 </body>
